<resources>
    <string name="app_name">KreatoRoom</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="input_password">Password Input</string>
    <string name="input_username">Username Input</string>
    <string name="name">Name</string>
    <string name="input_name">Name Input</string>
    <string name="email">Email</string>
    <string name="password_confirm">Password Confirmation</string>
    <string name="input_passwordconfirm">Password Confirm</string>
    <string name="input_passwordConfirm">Password Confirm</string>
    <string name="date">Date</string>
    <string name="input_date">Date Input</string>
    <string name="hint_search">What do you want to look for?</string>
    <string name="registering">Don\'t have an account yet?</string>
    <string name="toReg">Register</string>
    <string name="register">Register</string>
    <string name="account_exist">Have an account already?</string>
    <string name="log_in">Log In</string>
    <string name="greetings">Hello,</string>
    <string name="product_name">Product Name</string>
    <string name="shopping_cart">Shopping Cart</string>
</resources>